apps/bentopdf/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bentopdf
  namespace: traefik
spec:
  entryPoints:
    - frp
  routes:
    - match: Host(`pdf.${DOMAIN}`)
      kind: Rule
      middlewares:
        - name: frp-headers
          namespace: traefik
        - name: authelia-auth
          namespace: traefik
      services:
        - name: bentopdf
          port: 80
          namespace: bentopdf
